--- a/eat_duluth/index.html
+++ b/eat_duluth/index.html
@@ -9,10 +9,8 @@
     <meta name="author" content="Frey Hargarten - StarTribune">
 
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.19.1/mapbox-gl.css' rel='stylesheet' />
-    <link rel="stylesheet" href="../_common_resources/styles/startribune_dataviz_styles.css" /> 
-    <link href="../_common_resources/charts/c3-master/c3.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="js/featherlight-master/src/featherlight.css" />
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v1.0.0/mapbox-gl-geocoder.css' type='text/css' />
+    <link rel="stylesheet" href="../_common_resources/styles/startribune_dataviz_styles.css" /> 
 
     <style>
         body {
@@ -281,73 +279,6 @@
             clear: both;
             display: block;
         }
-        .wrapper-demo {
-            width: 100%;
-        }
-        .wrapper-dropdown-1 {
-            display: inline-block;
-            font-family: "Benton Sans", Helvetica, Arial, sans-serif;
-            z-index: 900;
-            background: #ddd;
-            color: #333;
-            cursor: pointer;
-            font-weight: bold;
-            outline: none;
-            padding: 8px;
-            position: relative;
-            width: 200px;
-            border: 1px solid #aaa;
-            box-shadow: 0 2px 1px rgba(0, 0, 0, 0.10);
-            font-size: 14px;
-            width: 100%;
-        }
-        .wrapper-dropdown-1 .dropdown {
-            font-weight: normal;
-            left: 0;
-            list-style: none;
-            opacity: 0;
-            pointer-events: none;
-            position: absolute;
-            right: 0;
-            top: 100%;
-            border: 1px solid #aaa;
-            background: #fff;
-            box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
-            margin-top: 0px !important;
-        }
-        ul.dropdown.months {
-            box-sizing: border-box;
-            margin: 0;
-            moz-box-sizing: border-box;
-            padding: 0;
-            webkit-box-sizing: border-box;
-            margin-top: -1px;
-            border-radius: 0 0 4px 4px;
-            background-clip: padding-box;
-        }
-        .wrapper-dropdown-1 .dropdown {
-            font-weight: normal;
-            left: 0;
-            list-style: none;
-            opacity: 0;
-            pointer-events: none;
-            position: absolute;
-            right: 0;
-            top: 100%;
-            border: 1px solid #aaa;
-            background: #fff;
-            box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
-            margin-top: 0px !important;
-        }
-        .wrapper-dropdown-1 .dropdown li:hover a {
-            background: #EFEFEF;
-        }
-        header[role="banner"] {
-            width: 100%;
-            height: 40px;
-            z-index: 1000;
-            background: #f0f0f0;
-        }
         .featherlight {
             display: none !important;
         }
@@ -581,6 +512,74 @@
         }
 
         }
+        .wrapper-demo {
+            width: 100%;
+        }
+        .wrapper-dropdown-1 {
+            display: inline-block;
+            font-family: "Benton Sans", Helvetica, Arial, sans-serif;
+            z-index: 900;
+            background: #ddd;
+            color: #333;
+            cursor: pointer;
+            font-weight: bold;
+            outline: none;
+            padding: 8px;
+            position: relative;
+            width: 200px;
+            border: 1px solid #aaa;
+            box-shadow: 0 2px 1px rgba(0, 0, 0, 0.10);
+            font-size: 14px;
+            width: 100%;
+        }
+        .wrapper-dropdown-1 .dropdown {
+            font-weight: normal;
+            left: 0;
+            list-style: none;
+            opacity: 0;
+            pointer-events: none;
+            position: absolute;
+            right: 0;
+            top: 100%;
+            border: 1px solid #aaa;
+            background: #fff;
+            box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
+            margin-top: 0px !important;
+        }
+        ul.dropdown.months {
+            box-sizing: border-box;
+            margin: 0;
+            moz-box-sizing: border-box;
+            padding: 0;
+            webkit-box-sizing: border-box;
+            margin-top: -1px;
+            border-radius: 0 0 4px 4px;
+            background-clip: padding-box;
+        }
+        .wrapper-dropdown-1 .dropdown {
+            font-weight: normal;
+            left: 0;
+            list-style: none;
+            opacity: 0;
+            pointer-events: none;
+            position: absolute;
+            right: 0;
+            top: 100%;
+            border: 1px solid #aaa;
+            background: #fff;
+            box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
+            margin-top: 0px !important;
+        }
+        .wrapper-dropdown-1 .dropdown li:hover a {
+            background: #EFEFEF;
+        }
+        header[role="banner"] {
+            width: 100%;
+            height: 40px;
+            z-index: 1000;
+            background: #f0f0f0;
+        }
+        #viewSwitch { display:none; }
     </style>
 
     <!--[if IE]>
