--- a/20151117-police_deaths/index_page.html
+++ b/20151117-police_deaths/index_page.html
@@ -365,8 +365,9 @@ var st_page_obj = {"story_id":"380298861","title":"Fatal police encounters","pri
       height:auto;
       margin: 0 auto 12px auto;
     } 
-  }    
-  .comments { display:none; }
+  }   
+
+  .nav, .comments, .l-footer-container { display:none; } 
   </style>
 </head>
 <body class=" storyid380298861 page-article">
