--- a/20160703-ticket_scalping/index.html
+++ b/20160703-ticket_scalping/index.html
@@ -96,6 +96,7 @@
 
 <div class="scroll">
 <div class="chartTitle">Concentration of scalped tickets by section</div>
+<div class="chatter">Ticket restrictions applied to certain sections left scalpers with fewer seats to grab.</div>
 <div class="seating"><img src="img/xcel_adele_tickets.png" width="100%" /></div>
 <div class="legendBox">
 <div class="legends">
@@ -154,6 +155,7 @@
 
 <div class="scroll">
 <div class="chartTitle">Concentration of scalped tickets by section</div>
+<div class="chatter">Beyonce saw greater numbers of coveted floor tickets and a wide dispersal across sections.</div>
 <div class="seating"><img src="img/tcf_beyonce_tickets.png" width="100%" /></div>
 <div class="legendBox">
 <div class="legends">
