--- a/20160702_usbank_stadium/index.html
+++ b/20160702_usbank_stadium/index.html
@@ -4,8 +4,8 @@
     <meta charset='utf-8' />
     <title></title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <title>U.S. Bank Stadium Chart</title>
-    <meta name="description" content="U.S. Bank Stadium Chart">
+    <title>U.S. Bank Stadium labor hours by trade</title>
+    <meta name="description" content="U.S. Bank Stadium labor hours by trade">
     <meta name="author" content="Frey Hargarten - StarTribune">
 
     <link href="../_common_resources/charts/c3-master/c3.css" rel="stylesheet" type="text/css">
