--- a/20160703-ticket_scalping/index.html
+++ b/20160703-ticket_scalping/index.html
@@ -61,40 +61,128 @@
 <body>
   <div id="wrapper">
 
+<!-- PERCENTS -->
+<div class="scroll" id="percent">
 <div class="section">
 <div class="icon"><img src="img/microphone.png" /></div>
 <div class="title">Adele</div>
 <div class="date">7/5/2016-7/6/2016</div>
 <div class="venue">XCEL Energy Center - St. Paul, MN</div>
-<div class="type restricted">Restricted</div>
+<div class="type restricted">Restricted Resales</div>
 
-<div class="scroll">
 <div class="chartTitle">Of ~36,000 available tickets</div>
 <div class='bigNum mixed'>5%</div>
 <div class="chartTitle">were scalped on StubHub</div>
 </div>
 
-<div class="scroll">
+<div class="section">
+<div class="icon"><img src="img/microphone2.png" /></div>
+<div class="title">Beyonce</div>
+<div class="date">5/23/2016</div>
+<div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
+<div class="type unrestricted">Unrestricted Resales</div>
+
+<div class="chartTitle">Of ~35,000 available tickets</div>
+<div class='bigNum mixed'>22%</div>
+<div class="chartTitle">were scalped on StubHub</div>
+</div>
+</div>
+
+
+<!-- TICKETS -->
+<div class="scroll" id="tickets">
+<div class="section">
+<div class="icon"><img src="img/microphone.png" /></div>
+<div class="title">Adele</div>
+<div class="date">7/5/2016-7/6/2016</div>
+<div class="venue">XCEL Energy Center - St. Paul, MN</div>
+<div class="type restricted">Restricted Resales</div>
+
 <div class="chart">
   <div class="chartTitle">Very few tickets were available within the first hour of onsale</div>
   <div id="adeleChart"></div>
 </div>
 </div>
 
-<div class="scroll">
+<div class="section">
+<div class="icon"><img src="img/microphone2.png" /></div>
+<div class="title">Beyonce</div>
+<div class="date">5/23/2016</div>
+<div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
+<div class="type unrestricted">Unrestricted Resales</div>
+
+<div class="chart">
+  <div class="chartTitle">Most tickets were available within the first hour of onsale</div>
+  <div id="beyonceChart"></div>
+</div>
+</div>
+</div>
+
+<!-- VALUE -->
+<div class="scroll" id="value">
+<div class="section">
+<div class="icon"><img src="img/microphone.png" /></div>
+<div class="title">Adele</div>
+<div class="date">7/5/2016-7/6/2016</div>
+<div class="venue">XCEL Energy Center - St. Paul, MN</div>
+<div class="type restricted">Restricted Resales</div>
+
 <div class="chartTitle">Available StubHub entries totalled to about</div>
 <div class='bigNum mixed'>$5.6 million</div>
 <div class="chartTitle">in available tickets</div>
 </div>
 
-<div class="scroll">
+<div class="section">
+<div class="icon"><img src="img/microphone2.png" /></div>
+<div class="title">Beyonce</div>
+<div class="date">5/23/2016</div>
+<div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
+<div class="type unrestricted">Unrestricted Resales</div>
+
+<div class="chartTitle">Available StubHub entries totalled to about</div>
+<div class='bigNum mixed'>$1.4 million</div>
+<div class="chartTitle">in available tickets</div>
+</div>
+</div>
+
+<!-- PRICE -->
+<div class="scroll" id="price">
+<div class="section">
+<div class="icon"><img src="img/microphone.png" /></div>
+<div class="title">Adele</div>
+<div class="date">7/5/2016-7/6/2016</div>
+<div class="venue">XCEL Energy Center - St. Paul, MN</div>
+<div class="type restricted">Restricted Resales</div>
+
 <div class="chart">
   <div class="chartTitle">Restricted ticket supply drove prices up</div>
   <div id="adeleChartPrice"></div>
 </div>
 </div>
 
-<div class="scroll">
+<div class="section">
+<div class="icon"><img src="img/microphone2.png" /></div>
+<div class="title">Beyonce</div>
+<div class="date">5/23/2016</div>
+<div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
+<div class="type unrestricted">Unrestricted Resales</div>
+
+<div class="chart">
+  <div class="chartTitle">More tickets meant lower prices</div>
+  <div id="beyonceChartPrice"></div>
+</div>
+</div>
+</div>
+
+<!-- SEATS -->
+<div class="scroll" id="seats">
+<div class="section">
+<div class="icon"><img src="img/microphone.png" /></div>
+<div class="title">Adele</div>
+<div class="date">7/5/2016-7/6/2016</div>
+<div class="venue">XCEL Energy Center - St. Paul, MN</div>
+<div class="type restricted">Restricted Resales</div>
+
 <div class="chartTitle">Concentration of scalped tickets by section</div>
 <div class="chatter">Ticket restrictions applied to certain sections left scalpers with fewer seats to grab.</div>
 <div class="seating"><img src="img/xcel_adele_tickets.png" width="100%" /></div>
@@ -118,42 +206,13 @@
 </div>
 </div>
 
-</div>
-
 <div class="section">
 <div class="icon"><img src="img/microphone2.png" /></div>
 <div class="title">Beyonce</div>
 <div class="date">5/23/2016</div>
 <div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
-<div class="type unrestricted">Unrestricted</div>
+<div class="type unrestricted">Unrestricted Resales</div>
 
-<div class="scroll">
-<div class="chartTitle">Of ~35,000 available tickets</div>
-<div class='bigNum mixed'>22%</div>
-<div class="chartTitle">were scalped on StubHub</div>
-</div>
-
-<div class="scroll">
-<div class="chart">
-  <div class="chartTitle">Most tickets were available within the first hour of onsale</div>
-  <div id="beyonceChart"></div>
-</div>
-</div>
-
-<div class="scroll">
-<div class="chartTitle">Available StubHub entries totalled to about</div>
-<div class='bigNum mixed'>$1.4 million</div>
-<div class="chartTitle">in available tickets</div>
-</div>
-
-<div class="scroll">
-<div class="chart">
-  <div class="chartTitle">More tickets meant lower prices</div>
-  <div id="beyonceChartPrice"></div>
-</div>
-</div>
-
-<div class="scroll">
 <div class="chartTitle">Concentration of scalped tickets by section</div>
 <div class="chatter">Beyonce saw greater numbers of coveted floor tickets and a wide dispersal across sections.</div>
 <div class="seating"><img src="img/tcf_beyonce_tickets.png" width="100%" /></div>
@@ -176,10 +235,13 @@
   </div>
 </div>
 </div>
+</div>
+
+<!-- BIG CHART -->
+<div class="scroll" id="bigchart">
 
 </div>
 
-</div>
 
   </div>
 </body>
@@ -193,6 +255,20 @@
 
 //https://script.google.com/macros/s/AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu/exec?id=1cJMavlb8PBBlbRngyzmZaG5A0yjltFwhGw0KDOC91vA&sheet=strikes
 //https://script.google.com/macros/s/AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu/exec?id=1cJMavlb8PBBlbRngyzmZaG5A0yjltFwhGw0KDOC91vA&sheet=airports
+
+$.urlParam = function(name){
+  var results = new RegExp('[\?&]' + name + '=([^&#]*)').exec(window.location.href);
+  return results[1] || 0;
+}
+
+if ($.urlParam('section') != 0 ) { 
+  var section = $.urlParam('section');
+  $(".scroll").hide();
+  $("#" + section).show();
+} else {
+  $(".scroll").show();
+
+}
 
 d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=1gYpbP48cXP2Bd603q3X2dVinyTwAWq2gHmSQ9T6ibzI&sheet=totals", function(error, json) {
 
