--- a/20160703-ticket_scalping/index.html
+++ b/20160703-ticket_scalping/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 
 <html lang="en">
@@ -15,12 +14,11 @@
   
   <style>
    #wrapper { width:920px; margin-left:auto; margin-right:auto; }
-   .section { text-align:center; font-family:"Benton Sans",Helvetica,Arial,sans-serif; padding:20px; border-bottom:solid 1px #ddd; clear:both; height:auto; display:inline-block; width:48%; vertical-align:top; }
+   .section { font-family:"Benton Sans",Helvetica,Arial,sans-serif; padding:20px; border-bottom:solid 1px #ddd; clear:both; height:auto; display:inline-block; width:48%; vertical-align:top; border-radius:5px; border:1px solid #ddd; box-shadow: 1px 1px 5px #888888; }
    .title { font-size:1.5em; font-weight:bold; }
-   .icon img { width:80px; height:80px; text-align:center; }
    /*.seating, .infobox { float:left; width:48%; text-align:center; }
    .chart, .datapoints { float:right; width:48%; height:200px; }*/
-   .chatter { clear:both; text-align:center !important; }
+   .chatter { clear:both; }
    .seating img { width:300px; }
 
    #chart .c3-line { stroke-width:6px !important; }
@@ -29,9 +27,9 @@
 
    .date { font-size:.8em; padding:7px; }
 
-   .restricted { background-color:#F28670; padding:5px; font-weight:900; }
-   .unrestricted { background-color:#9EE384; padding:5px; font-weight:900; }
-   .mixed { background-color:#AFA8C9; padding:5px; font-weight:900; }
+   .restricted { background-color:#F28670; font-weight:900; }
+   .unrestricted { background-color:#9EE384; font-weight:900; }
+   .mixed { background-color:#AFA8C9; font-weight:900; }
 
    .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:250px; }
    .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
@@ -43,6 +41,11 @@
 
    .primary { background-color:#226666; color:#fff; padding:5px; }
    .secondary { background-color:#AA6C39; color:#fff; padding:5px; }
+
+   .type { border-radius:50%; width:15px; height:15px; text-align:center; display:inline-block; vertical-align:bottom; margin-bottom:3px; }
+   .icon { float:left; border-radius:50%; margin-right:20px; }
+   .icon img { width:90px; height:90px; text-align:center; border-radius:50%; }
+   .bigNum { text-align:center; }
 
    .p1 { background-color:#F4F3F7; }
    .p2 { background-color:#D6D2E4; }
@@ -64,27 +67,37 @@
 <!-- PERCENTS -->
 <div class="scroll" id="percent">
 <div class="section">
-<div class="icon"><img src="img/microphone.png" /></div>
+<div class="icon"><img src="img/adele.jpg" /></div>
 <div class="title">Adele</div>
-<div class="date">7/5/2016-7/6/2016</div>
-<div class="venue">XCEL Energy Center - St. Paul, MN</div>
-<div class="type restricted">Restricted Resales</div>
+<span class="type restricted"></span> Restricted Resales
 
-<div class="chartTitle">Of ~36,000 available tickets</div>
+<!-- <div class="breaker"></div> -->
+
+<!-- <div class="date">7/5/2016-7/6/2016</div>
+<div class="venue">XCEL Energy Center - St. Paul, MN</div>
+
+<div class="breaker"></div> -->
+
+<div class="chartTitle">Of ~36,000 available tickets,</div>
 <div class='bigNum mixed'>5%</div>
-<div class="chartTitle">were scalped on StubHub</div>
+<div class="chartTitle">were available on StubHub</div>
 </div>
 
 <div class="section">
-<div class="icon"><img src="img/microphone2.png" /></div>
-<div class="title">Beyonce</div>
-<div class="date">5/23/2016</div>
-<div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
-<div class="type unrestricted">Unrestricted Resales</div>
+<div class="icon"><img src="img/beyonce.jpg" /></div>
+<div class="title">Beyoncé</div>
+<span class="type unrestricted"></span> Unrestricted Resales
 
-<div class="chartTitle">Of ~35,000 available tickets</div>
+<div class="breaker"></div>
+
+<!-- <div class="date">5/23/2016</div>
+<div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
+
+<div class="breaker"></div> -->
+
+<div class="chartTitle">Of ~35,000 available tickets,</div>
 <div class='bigNum mixed'>22%</div>
-<div class="chartTitle">were scalped on StubHub</div>
+<div class="chartTitle">were available on StubHub</div>
 </div>
 </div>
 
@@ -92,11 +105,16 @@
 <!-- TICKETS -->
 <div class="scroll" id="tickets">
 <div class="section">
-<div class="icon"><img src="img/microphone.png" /></div>
+<div class="icon"><img src="img/adele.jpg" /></div>
 <div class="title">Adele</div>
-<div class="date">7/5/2016-7/6/2016</div>
+<span class="type restricted"></span> Restricted Resales
+
+<!-- <div class="breaker"></div> -->
+
+<!-- <div class="date">7/5/2016-7/6/2016</div>
 <div class="venue">XCEL Energy Center - St. Paul, MN</div>
-<div class="type restricted">Restricted Resales</div>
+
+<div class="breaker"></div> -->
 
 <div class="chart">
   <div class="chartTitle">Very few tickets were available within the first hour of onsale</div>
@@ -105,15 +123,20 @@
 </div>
 
 <div class="section">
-<div class="icon"><img src="img/microphone2.png" /></div>
-<div class="title">Beyonce</div>
-<div class="date">5/23/2016</div>
+<div class="icon"><img src="img/beyonce.jpg" /></div>
+<div class="title">Beyoncé</div>
+<span class="type unrestricted"></span> Unrestricted Resales
+
+<!-- <div class="breaker"></div> -->
+
+<!-- <div class="date">5/23/2016</div>
 <div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
-<div class="type unrestricted">Unrestricted Resales</div>
+
+<div class="breaker"></div> -->
 
 <div class="chart">
   <div class="chartTitle">Most tickets were available within the first hour of onsale</div>
-  <div id="beyonceChart"></div>
+  <div id="BeyoncéChart"></div>
 </div>
 </div>
 </div>
@@ -121,11 +144,16 @@
 <!-- VALUE -->
 <div class="scroll" id="value">
 <div class="section">
-<div class="icon"><img src="img/microphone.png" /></div>
+<div class="icon"><img src="img/adele.jpg" /></div>
 <div class="title">Adele</div>
-<div class="date">7/5/2016-7/6/2016</div>
+<span class="type restricted"></span> Restricted Resales
+
+<!-- <div class="breaker"></div> -->
+
+<!-- <div class="date">7/5/2016-7/6/2016</div>
 <div class="venue">XCEL Energy Center - St. Paul, MN</div>
-<div class="type restricted">Restricted Resales</div>
+
+<div class="breaker"></div> -->
 
 <div class="chartTitle">Available StubHub entries totalled to about</div>
 <div class='bigNum mixed'>$5.6 million</div>
@@ -133,11 +161,16 @@
 </div>
 
 <div class="section">
-<div class="icon"><img src="img/microphone2.png" /></div>
-<div class="title">Beyonce</div>
-<div class="date">5/23/2016</div>
+<div class="icon"><img src="img/beyonce.jpg" /></div>
+<div class="title">Beyoncé</div>
+<span class="type unrestricted"></span> Unrestricted Resales
+
+<!-- <div class="breaker"></div> -->
+
+<!-- <div class="date">5/23/2016</div>
 <div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
-<div class="type unrestricted">Unrestricted Resales</div>
+
+<div class="breaker"></div> -->
 
 <div class="chartTitle">Available StubHub entries totalled to about</div>
 <div class='bigNum mixed'>$1.4 million</div>
@@ -148,11 +181,16 @@
 <!-- PRICE -->
 <div class="scroll" id="price">
 <div class="section">
-<div class="icon"><img src="img/microphone.png" /></div>
+<div class="icon"><img src="img/adele.jpg" /></div>
 <div class="title">Adele</div>
-<div class="date">7/5/2016-7/6/2016</div>
+<span class="type restricted"></span> Restricted Resales
+
+<!-- <div class="breaker"></div> -->
+
+<!-- <div class="date">7/5/2016-7/6/2016</div>
 <div class="venue">XCEL Energy Center - St. Paul, MN</div>
-<div class="type restricted">Restricted Resales</div>
+
+<div class="breaker"></div> -->
 
 <div class="chart">
   <div class="chartTitle">Restricted ticket supply drove prices up</div>
@@ -161,15 +199,20 @@
 </div>
 
 <div class="section">
-<div class="icon"><img src="img/microphone2.png" /></div>
-<div class="title">Beyonce</div>
-<div class="date">5/23/2016</div>
+<div class="icon"><img src="img/beyonce.jpg" /></div>
+<div class="title">Beyoncé</div>
+<span class="type unrestricted"></span> Unrestricted Resales
+
+<!-- <div class="breaker"></div> -->
+
+<!-- <div class="date">5/23/2016</div>
 <div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
-<div class="type unrestricted">Unrestricted Resales</div>
+
+<div class="breaker"></div> -->
 
 <div class="chart">
-  <div class="chartTitle">More tickets meant lower prices</div>
-  <div id="beyonceChartPrice"></div>
+  <div class="chartTitle">More tickets meant lower prices for concertgoers</div>
+  <div id="BeyoncéChartPrice"></div>
 </div>
 </div>
 </div>
@@ -177,14 +220,18 @@
 <!-- SEATS -->
 <div class="scroll" id="seats">
 <div class="section">
-<div class="icon"><img src="img/microphone.png" /></div>
+<div class="icon"><img src="img/adele.jpg" /></div>
 <div class="title">Adele</div>
-<div class="date">7/5/2016-7/6/2016</div>
-<div class="venue">XCEL Energy Center - St. Paul, MN</div>
-<div class="type restricted">Restricted Resales</div>
+<span class="type restricted"></span> Restricted Resales
 
-<div class="chartTitle">Concentration of scalped tickets by section</div>
-<div class="chatter">Ticket restrictions applied to certain sections left scalpers with fewer seats to grab.</div>
+<!-- <div class="breaker"></div> -->
+
+<!-- <div class="date">7/5/2016-7/6/2016</div>
+<div class="venue">XCEL Energy Center - St. Paul, MN</div> -->
+
+<!-- <div class="breaker"></div> -->
+
+<div class="chartTitle">Ticket restrictions applied to certain sections left scalpers with fewer seats to grab</div>
 <div class="seating"><img src="img/xcel_adele_tickets.png" width="100%" /></div>
 <div class="legendBox">
 <div class="legends">
@@ -207,14 +254,18 @@
 </div>
 
 <div class="section">
-<div class="icon"><img src="img/microphone2.png" /></div>
-<div class="title">Beyonce</div>
-<div class="date">5/23/2016</div>
-<div class="venue">TCF Bank Stadium - Minneapolis, MN</div>
-<div class="type unrestricted">Unrestricted Resales</div>
+<div class="icon"><img src="img/beyonce.jpg" /></div>
+<div class="title">Beyoncé</div>
+<span class="type unrestricted"></span> Unrestricted Resales
+<!-- 
+<div class="breaker"></div> -->
 
-<div class="chartTitle">Concentration of scalped tickets by section</div>
-<div class="chatter">Beyonce saw greater numbers of coveted floor tickets and a wide dispersal across sections.</div>
+<!-- <div class="date">5/23/2016</div>
+<div class="venue">TCF Bank Stadium - Minneapolis, MN</div> -->
+<!-- 
+<div class="breaker"></div> -->
+
+<div class="chartTitle">Beyoncé saw greater numbers of coveted floor tickets and a wide dispersal across sections</div>
 <div class="seating"><img src="img/tcf_beyonce_tickets.png" width="100%" /></div>
 <div class="legendBox">
 <div class="legends">
@@ -319,7 +370,7 @@ aChart = c3.generate({
 var bChart;
 
 bChart = c3.generate({
-        bindto: '#beyonceChart',
+        bindto: '#BeyoncéChart',
         size: { height: 200 },
         padding: padding,
         data: {
@@ -389,7 +440,7 @@ aChartPrice = c3.generate({
 var bChartPrice;
 
 bChartPrice = c3.generate({
-        bindto: '#beyonceChartPrice',
+        bindto: '#BeyoncéChartPrice',
         size: { height: 200 },
         padding: padding,
         data: {
