--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -21,14 +21,15 @@
 
 /*      #chart .c3-line { stroke-width:5px !important; opacity:0 !important; }
       #chart_m .c3-line { stroke-width:5px !important; opacity:0 !important; }*/
-
+       
+      .container { width:100%; text-align:center; }
       .legendChart { width:100%; }
       .legendChart div { width:19%; display:inline-block; text-align:center; cursor: pointer; color:#000; }
       .legendChart div:hover, .selected2 { background-color:#333 !important; color:#fff !important; } 
 
       .c3-area { opacity:0.8 !important; }
 
-      .byline { text-align:right !important;  }
+      .byline { text-align:right !important; font-size:.8em; }
       .byline a { color:#ccc !important; font-weight:400; }
 
       p { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
@@ -68,7 +69,7 @@
 
 <div class="breaker"></div>
 
-  <div class="byline"><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten</a></div>
+  <div class="byline"><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Graphic by Jeff Hargarten</a></div>
 
 <!-- <small class="byline">Data Visualization by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten</a></small> -->
 
