--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -10,7 +10,6 @@
 
     <link href="../_common_resources/charts/c3-master/c3.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../_common_resources/styles/startribune_dataviz_styles.css" /> 
-
 </head>
 <style>
        body { margin:0; padding:0; font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
@@ -19,8 +18,8 @@
       .chatter { padding:15px; text-align:center; margin-bottom:20px; text-align:left; }
       .wrapper-dropdown-1 .active { background:#ddd; }
 
-/*      #chart .c3-line { stroke-width:5px !important; opacity:0 !important; }
-      #chart_m .c3-line { stroke-width:5px !important; opacity:0 !important; }*/
+      #chart .c3-line { stroke-width:5px !important; opacity:0 !important; }
+      #chart_m .c3-line { stroke-width:5px !important; opacity:0 !important; }
        
       .container { width:100%; text-align:center; }
       .legendChart { width:100%; }
