--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -62,7 +62,7 @@
 
 <body>
 <div id="wrapper">
-<div class="chartTitle">LABOR HOURS BY TRADE</div>
+<div class="chartTitle">LABOR HOURS BY TRADE TESTING</div>
 <div id="totals"><span id="total">3,497,834</span> hours</div>
 
 <!-- <div class="chatter">blah blah blah</div>-->
