--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -49,7 +49,8 @@
       #all { float:left; width:19%; height:86px; vertical-align:center; padding-top:35px; border-radius:5px; background-color:#ddd; }
       .legendChart { float:right; width:80%; }
       .legendChart div { width:19%; display:inline-block; text-align:center; cursor: pointer; color:#000; border-radius:5px; margin:3px; padding:10px; }
-      .legendChart div:hover, #all:hover, .selected2 { background-color:#557799 !important; color:#fff !important; cursor:pointer; } 
+      .legendChart .selected2 { background-color:#557799 !important; color:#fff !important; cursor:pointer; } 
+      .legendChart #all:hover, div:hover { background-color:#ccc !important; color:#333 !important; cursor:pointer; } 
     
       @media (max-width:500px) {
         #chart { display:none; }
