--- a/20160702-usbank_stadium/index.html
+++ b/20160702-usbank_stadium/index.html
@@ -50,7 +50,9 @@
       .legendChart { float:right; width:80%; }
       .legendChart div { width:19%; display:inline-block; text-align:center; cursor: pointer; color:#000; border-radius:5px; margin:3px; padding:10px; }
       .legendChart .selected2 { background-color:#557799 !important; color:#fff !important; cursor:pointer; } 
-      .legendChart #all:hover, div:hover { background-color:#ccc !important; color:#333 !important; cursor:pointer; } 
+      .legendChart #all:hover { background-color:#995500 !important; color:#fff !important; cursor:pointer; } 
+      .legendChart div:hover { background-color:#ccc !important; color:#fff !important; cursor:pointer; } 
+    
     
       @media (max-width:500px) {
         #chart { display:none; }
